slurm_output/inter_SC_19122.out
The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.
Token is valid (permission: fineGrained).
Your token has been saved to /home/jeongseokoh/.cache/huggingface/token
Login successful
  File "/data2/jeongseokoh/jeongseokoh/inter_SC/inter_SC.py", line 22
    print("Inter SC"\nNum Path: {args.n_inter} + {n_filter} x {n_output_per_one}"))
                     ^
SyntaxError: unexpected character after line continuation character
srun: error: n02: task 0: Exited with exit code 1
